<resources>
    <string name="app_name">StadiumCommentApp</string>
    <string name="title_home">Home</string>
    <string name="title_comment">Comment</string>
    <string name="title_write">Write</string>
    <string name="title_profile">Profile</string>

    <string name="text_interest_stadium">관심 경기장</string>
    <string name="text_my_game_schedule">나의 경기 일정</string>
    <string name="text_no_interest_stadium">설정한 관심 경기장이 없습니다!</string>
    <string name="text_near_info">경기장 주변 정보 보기</string>
    <string name="text_see_stadium_comment">경기장 후기 보기</string>
    <string name="text_instagram">Instagram</string>
    <string name="text_youtube">Youtube</string>

    <string name="monday">월요일</string>
    <string name="tuesday">화요일</string>
    <string name="wednesday">수요일</string>
    <string name="thursday">목요일</string>
    <string name="friday">금요일</string>
    <string name="saturday">토요일</string>
    <string name="sunday">일요일</string>

    <string name="text_my_info">내 정보</string>
    <string name="text_modify">수정하기</string>
    <string name="text_my_review">내가 쓴 후기</string>

    <string name="text_new_schedule">새 일정 등록</string>
    <string name="text_date">날짜</string>
    <string name="text_game_info">경기 정보</string>
    <string name="text_stadium_info">경기장 정보</string>
    <string name="text_watch_type">관람 정보</string>
    <string name="text_memo">메모</string>
    <string name="text_vs">vs.</string>
    <string name="text_home">홈</string>
    <string name="text_away">어웨이</string>
    <string name="text_watch_stadium">직관</string>
    <string name="text_watch_home">집관</string>
    <string name="text_submit">등록하기</string>
    <string name="text_select">선택하기</string>
    <string name="text_select_home_team">홈팀을 선택해주세요.</string>

    <string name="text_new_comment">새 후기 등록</string>
    <string name="text_watch_date">관람 날짜</string>
    <string name="text_select_stadium">경기장 선택</string>
    <string name="text_select_seat">자리 선택</string>
    <string name="text_area">구역</string>
    <string name="text_seat_num">좌석 번호</string>
    <string name="text_one_line_comment">한 줄 평</string>
    <string name="text_please_write_comment">후기를 작성해주세요.</string>

</resources>
