<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.example.stadiumcommentapp.ui.common.TitleBarView
        android:id="@+id/new_comment_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/text_watch_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_watch_date"
        app:layout_constraintTop_toBottomOf="@id/new_comment_title"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/select_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="2001-01-01"
        android:textAlignment="center"
        android:background="@drawable/new_schedule_background"
        app:layout_constraintTop_toTopOf="@+id/text_watch_date"
        app:layout_constraintBottom_toBottomOf="@id/text_watch_date"
        app:layout_constraintLeft_toRightOf="@id/text_watch_date"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/text_select_stadium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_select_stadium"
        app:layout_constraintTop_toBottomOf="@id/text_watch_date"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/select_stadium"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="경기장을 선택해주세요."
        android:textAlignment="center"
        android:background="@drawable/new_schedule_background"
        app:layout_constraintTop_toTopOf="@+id/text_select_stadium"
        app:layout_constraintBottom_toBottomOf="@id/text_select_stadium"
        app:layout_constraintLeft_toRightOf="@id/text_select_stadium"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/text_select_seat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_select_seat"
        app:layout_constraintTop_toBottomOf="@id/text_select_stadium"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/select_seat_area"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/text_area"
        android:textAlignment="center"
        android:background="@drawable/new_schedule_background"
        app:layout_constraintTop_toTopOf="@id/text_select_seat"
        app:layout_constraintBottom_toBottomOf="@id/text_select_seat"
        app:layout_constraintLeft_toRightOf="@id/text_select_seat"
        app:layout_constraintRight_toLeftOf="@id/select_seat_num"/>

    <TextView
        android:id="@+id/select_seat_num"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/text_seat_num"
        android:textAlignment="center"
        android:background="@drawable/new_schedule_background"
        app:layout_constraintTop_toTopOf="@id/text_select_seat"
        app:layout_constraintBottom_toBottomOf="@id/text_select_seat"
        app:layout_constraintLeft_toRightOf="@id/select_seat_area"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/text_one_line_comment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_one_line_comment"
        app:layout_constraintTop_toBottomOf="@id/text_select_seat"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <EditText
        android:id="@+id/edit_one_line_comment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/new_schedule_background"
        app:layout_constraintTop_toBottomOf="@id/text_one_line_comment"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <EditText
        android:id="@+id/edit_comment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:hint="@string/text_please_write_comment"
        android:background="@drawable/new_schedule_background"
        app:layout_constraintTop_toBottomOf="@id/edit_one_line_comment"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/button_submit"/>

    <Button
        android:id="@+id/button_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_submit"
        android:background="@drawable/new_schedule_submit_background"
        app:layout_constraintTop_toBottomOf="@id/edit_comment"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
