<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.stadiumcommentapp.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_home_date_detail"
            app:destination="@id/navigation_home_date_detail">
            <argument
                android:name="date"
                app:argType="string"
                android:defaultValue="2001-01-01" />
        </action>
    </fragment>

    <fragment
        android:id="@+id/navigation_home_date_detail"
        android:name="com.example.stadiumcommentapp.ui.home.HomeDateDetailFragment"
        android:label="HomeDateDetail"
        tools:layout="@layout/fragment_home_date_detail">
        <argument
            android:name="date"
            app:argType="string" />
        <action
            android:id="@+id/action_navigation_home_date_detail_to_navigation_home_new_schedule"
            app:destination="@id/navigation_home_new_schedule">
            <argument
                android:name="date"
                app:argType="string"
                android:defaultValue="2001-01-01"/>
        </action>
    </fragment>

    <fragment
        android:id="@+id/navigation_home_new_schedule"
        android:name="com.example.stadiumcommentapp.ui.home.HomeNewScheduleFragment"
        android:label="HomeNewSchedule"
        tools:layout="@layout/fragment_home_new_schedule">
        <argument
            android:name="date"
            app:argType="string"/>
        <action
            android:id="@+id/action_navigation_home_new_schedule_to_navigation_home"
            app:destination="@id/navigation_home"/>
    </fragment>

    <fragment
        android:id="@+id/navigation_comment"
        android:name="com.example.stadiumcommentapp.ui.comment.CommentFragment"
        android:label="@string/title_comment"
        tools:layout="@layout/fragment_comment">
        <action
            android:id="@+id/action_navigation_comment_to_navigation_comment_new"
            app:destination="@id/navigation_comment_new"/>
    </fragment>

    <fragment
        android:id="@+id/navigation_comment_new"
        android:name="com.example.stadiumcommentapp.ui.comment.CommentNewFragment"
        android:label="CommentNew"
        tools:layout="@layout/fragment_comment_new"/>

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.stadiumcommentapp.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>